--- a/user/password.html
+++ b/user/password.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../res/fontAwesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/user.css" />
+    <script src="../js/jquery-1.12.4.min.js"></script>
 </head>
 
 <body>
@@ -25,15 +26,15 @@
             <form action="" class="form">
                 <div class="form_box">
                     <div class="mui-input-row">
-                        <input name="pass" type="password" placeholder="密码" class="mui-input-password">
+                        <input name="oldPassword" type="password" placeholder="密码" class="mui-input-password">
                         <span class="mui-icon mui-icon-eye"></span>
                     </div>
                     <div class="mui-input-row">
-                        <input name="rePass" type="password" placeholder="确认密码" class="mui-input-password">
+                        <input name="newPassword" type="password" placeholder="确认密码" class="mui-input-password">
                         <span class="mui-icon mui-icon-eye"></span>
                     </div>
                     <div class="mui-input-row">
-                        <input name="code" type="text" class="mycode" placeholder="认证码">
+                        <input name="vCode" type="text" class="mycode" placeholder="认证码">
                         <button class="btn_getCode mui-btn mui-btn-primary">获取认证码</button>
                     </div>
                     <button class="mui-btn mui-btn-primary btn_login">确认修改</button>
@@ -49,6 +50,37 @@
         </footer>
     </div>
     <script src="../res/mui/js/mui.min.js"></script>
+    <script>
+        $('.btn_getCode').on('click',function(){
+            $.ajax({
+                url : '/api/user/vCodeForUpdatePassword',
+                type : 'get',
+                success : function(info){
+                    console.log(info)
+                }
+            })
+            return false
+        })
+
+        $('.btn_login').on('click',function(){
+           var data = $('.form').serialize();
+          console.log(data);
+           $.ajax({
+               url : '/api/user/updatePassword',
+               type : 'post',
+               data : data,
+               success : function(info){
+                console.log(info)
+                   if(info.success){
+                   
+                       location.href = '/user/login.html'
+                   }
+               }
+           })
+           return false
+        })
+    
+    </script>
 </body>
 
 </html>
