--- a/user/register.html
+++ b/user/register.html
@@ -61,7 +61,7 @@
     </div>
     <script src="../res/mui/js/mui.min.js"></script>
     <script>
-       $('.mui-btn').on('click',function(){
+       $('.btn_login').on('click',function(){
            var data = $('.form').serialize();
            $.ajax({
                url : '/api/user/register',
@@ -70,7 +70,7 @@
                data : data,
                success : function(info){
                    if(info.success){
-                       location.href = '/index.html'
+                       location.href = '/user/login.html'
                    }
                }
            })
